Added feature flag for multi-viewport mode

--- a/INSTALL_osmv.toml
+++ b/INSTALL_osmv.toml
@@ -1,2 +1,8 @@
 resources = "resources"
 
+[experimental_feature_flags]
+
+# enable dragging panels out of the host window and into their own window
+#
+# warning: results vary *greatly* accross platforms
+multiple_viewports = false
