Implement Mesh_reference (rather than using raw int)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,7 @@ add_executable(osmv
     src/3d/meshes.cpp
     src/3d/texturing.hpp
     src/3d/texturing.cpp
+    src/3d/mesh_reference.hpp
     src/3d/raw_mesh_instance.hpp
     src/3d/raw_drawlist.hpp
     src/3d/raw_drawlist.cpp
