Further improvements to editor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,6 +103,14 @@ add_executable(osmv
     src/widgets/component_selection_widget.cpp
     src/widgets/model_viewer_widget.hpp
     src/widgets/model_viewer_widget.cpp
+    src/widgets/add_joint_modal.hpp
+    src/widgets/add_joint_modal.cpp
+    src/widgets/properties_editor.hpp
+    src/widgets/properties_editor.cpp
+    src/widgets/reassign_socket_modal.hpp
+    src/widgets/reassign_socket_modal.cpp
+    src/widgets/attach_geometry_modal.hpp
+    src/widgets/attach_geometry_modal.cpp
 
     src/screens/screen.hpp
     src/screens/error_screen.hpp
