Added -Wformat-security to dev build file (it is enabled on CI, but not locally)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -195,6 +195,7 @@ target_compile_options(osmv PRIVATE
         -Wdisabled-optimization
         -Wpacked
         -Wno-sign-compare  # disable: broken by STB headers
+        -Wformat-security
 
         # regardless of debug/release, pin the frame pointer register
         # so that stack traces are sane when debugging (even in Release).
