--- a/src/osmv_config.hpp.in
+++ b/src/osmv_config.hpp.in
@@ -3,3 +3,4 @@
 #define OSMV_VERSION_PATCH @osmv_VERSION_PATCH@
 #define OSMV_VERSION_STRING "@osmv_VERSION_MAJOR@.@osmv_VERSION_MINOR@.@osmv_VERSION_PATCH@"
 #define OSMV_GLSL_VERSION "#version 330 core"
+#define OSMV_BUILD_ID "@OSMV_BUILD_ID@"
