Fixed typos in the osc build config file

--- a/src/osc_build_config.hpp.in
+++ b/src/osc_build_config.hpp.in
@@ -1,6 +1,6 @@
-#define OSC_VERSION_MAJOR @osmv_VERSION_MAJOR@
-#define OSC_VERSION_MINOR @osmv_VERSION_MINOR@
-#define OSC_VERSION_PATCH @osmv_VERSION_PATCH@
-#define OSC_VERSION_STRING "@osmv_VERSION_MAJOR@.@osmv_VERSION_MINOR@.@osmv_VERSION_PATCH@"
+#define OSC_VERSION_MAJOR @osc_VERSION_MAJOR@
+#define OSC_VERSION_MINOR @osc_VERSION_MINOR@
+#define OSC_VERSION_PATCH @osc_VERSION_PATCH@
+#define OSC_VERSION_STRING "@osc_VERSION_MAJOR@.@osc_VERSION_MINOR@.@osc_VERSION_PATCH@"
 #define OSC_GLSL_VERSION "#version 330 core"
-#define OSC_BUILD_ID "@OSMV_BUILD_ID@"
+#define OSC_BUILD_ID "@OSC_BUILD_ID@"
